Navigation overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -718,11 +718,10 @@ body {
         position: absolute;
         height: 7rem;
         width: 7rem;
-        border-radius: 50%;
         top: 4rem;
-        right: -2rem;
+        right: 0rem;
         background-color: white;
-        padding: 0 11rem 0 0rem;
+        padding: 0 5rem 0 0rem;
         text-align: center;
         cursor: pointer; }
         .navigation__button-pp {
