--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,12 +13,11 @@
             //background-color: $color-white;
             height: 7rem;
             width: 7rem;
-            border-radius: 50%;
             top: 4rem;
-            right: -2rem;
+            right: 0rem;
             //z-index: 20000;
             background-color: white;
-            padding: 0 11rem 0 0rem;
+            padding: 0 5rem 0 0rem;
             text-align: center;
             //box-shadow: 0 1rem 3rem rgba($color-black, .1);
             cursor: pointer;
